--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "internshiphub",
-  "name": "internshiphub",
+  "short_name": "InternGuide AI",
+  "name": "InternGuide AI",
   "icons": [
     {
       "src": "favicon.ico",
