--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,10 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.0.1",
     "framer-motion": "^10.16.4",
-    "lucide-react": "^0.484.0",
+  "lucide-react": "^0.484.0",
+  "i18next": "^23.12.2",
+  "react-i18next": "^14.1.2",
+  "i18next-browser-languagedetector": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
