--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://ankit1412ydv:Ankit%40123%23@cluster0.di0ke2j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET="Ankitkumar1412"
+MONGODB_URI=mongodb+srv://amanydv1412y_db_user:A9QGfSQieGpoZXKr@cluster0.veyskp8.mongodb.net/?appName=Cluster0
+JWT_SECRET="Ankit"
 NODE_ENV=development
