--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build:frontend": "cd ../frontend && npm install && npm run build",
-    "serve": "npm run build:frontend && cross-env SERVE_FRONTEND=true node server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,7 +18,6 @@
     "mongoose": "^7.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "cross-env": "^7.0.3"
+    "nodemon": "^3.0.1"
   }
 }
