--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://amanydv1412y_db_user:A9QGfSQieGpoZXKr@cluster0.veyskp8.mongodb.net/?appName=Cluster0
-JWT_SECRET="Ankit"
+MONGODB_URI=your url
+JWT_SECRET="any key"
 NODE_ENV=development
